mutants.out/log/crates__ax-core__src__finding.rs_line_122_col_9_001.log

*** crates/ax-core/src/finding.rs:122:9: replace Handle::parse -> Option<Handle> with Some(Default::default())

*** mutation diff:
--- crates/ax-core/src/finding.rs
+++ replace Handle::parse -> Option<Handle> with Some(Default::default())
@@ -114,36 +114,17 @@
             Handle::Range { column, start, end } => format!("range:{column}:{start}:{end}"),
             Handle::Dist { column } => format!("dist:{column}"),
         }
     }
 
     /// Parses the canonical form. Returns `None` on any malformed handle so the
     /// CLI can fail cleanly rather than guess (honest absence).
     pub fn parse(s: &str) -> Option<Handle> {
-        let (kind, rest) = s.split_once(':')?;
-        match kind {
-            "col" => Some(Handle::Column { name: rest.to_string() }),
-            "dist" => Some(Handle::Dist { column: rest.to_string() }),
-            "cell" => {
-                let (column, row) = rest.rsplit_once(':')?;
-                Some(Handle::Cell {
-                    column: column.to_string(),
-                    row: row.parse().ok()?,
-                })
-            }
-            "range" => {
-                let mut it = rest.rsplitn(3, ':');
-                let end = it.next()?.parse().ok()?;
-                let start = it.next()?.parse().ok()?;
-                let column = it.next()?.to_string();
-                Some(Handle::Range { column, start, end })
-            }
-            _ => None,
-        }
+        Some(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 /// One detected anomaly with everything an agent needs to act or drill in.
 #[derive(Debug, Clone, Serialize, Deserialize)]
 pub struct Finding {
     /// Detector that produced this finding (stable id).
     pub detector: String,


*** /home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=ax-core@0.1.0
       Fresh libc v0.2.186
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh bitflags v2.11.1
       Fresh autocfg v1.5.1
       Fresh linux-raw-sys v0.12.1
       Fresh fastrand v2.4.1
       Fresh once_cell v1.21.4
       Fresh wait-timeout v0.2.1
       Fresh memchr v2.8.1
       Fresh itoa v1.0.18
       Fresh bit-vec v0.8.0
       Fresh fnv v1.0.7
       Fresh quick-error v1.2.3
       Fresh unarray v0.1.4
       Fresh regex-syntax v0.8.10
       Fresh bit-set v0.8.0
       Fresh proc-macro2 v1.0.106
       Fresh getrandom v0.3.4
       Fresh getrandom v0.4.2
       Fresh rustix v1.1.4
       Fresh zerocopy v0.8.50
       Fresh serde_core v1.0.228
       Fresh zmij v1.0.21
       Fresh quote v1.0.45
       Fresh rand_core v0.9.5
       Fresh tempfile v3.27.0
       Fresh ppv-lite86 v0.2.21
       Fresh serde_json v1.0.150
       Fresh num-traits v0.2.19
       Fresh syn v2.0.117
       Fresh rand_chacha v0.9.0
       Fresh rand v0.9.4
       Fresh rand_xorshift v0.4.0
       Fresh rusty-fork v0.3.1
       Fresh thiserror-impl v2.0.18
       Fresh serde_derive v1.0.228
       Fresh proptest v1.11.0
       Fresh serde v1.0.228
       Fresh thiserror v2.0.18
       Dirty ax-core v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/crates/ax-core): the file `crates/ax-core/src/finding.rs` has changed (1780155797.080825101s, 1s after last build at 1780155796.812806185s)
   Compiling ax-core v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/crates/ax-core)
     Running `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name ax_core --edition=2021 crates/ax-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3cdd1824e2a37b8c -C extra-filename=-5ab5d1a675507000 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps --extern proptest=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libproptest-66f5263f594b7cee.rlib --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde-0e044a46a977e748.rlib --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde_json-7a9eb2fcd78de1ef.rlib --extern thiserror=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libthiserror-ade23de5d46b64b8.rlib`
     Running `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name ax_core --edition=2021 crates/ax-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=0c8fda170aa9664e -C extra-filename=-152e3833fb2b7c67 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde-0e044a46a977e748.rmeta --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde_json-7a9eb2fcd78de1ef.rmeta --extern thiserror=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libthiserror-ade23de5d46b64b8.rmeta`
error[E0277]: the trait bound `Handle: Default` is not satisfied
   --> crates/ax-core/src/finding.rs:122:14
    |
122 |         Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Handle`
   --> crates/ax-core/src/finding.rs:93:1
    |
 93 | pub enum Handle {
    | ^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error[E0277]: the trait bound `finding::Handle: Default` is not satisfied
   --> crates/ax-core/src/finding.rs:122:14
    |
122 |         Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `finding::Handle`
   --> crates/ax-core/src/finding.rs:93:1
    |
 93 | pub enum Handle {
    | ^^^^^^^^^^^^^^^

error: could not compile `ax-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name ax_core --edition=2021 crates/ax-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=0c8fda170aa9664e -C extra-filename=-152e3833fb2b7c67 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde-0e044a46a977e748.rmeta --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde_json-7a9eb2fcd78de1ef.rmeta --extern thiserror=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libthiserror-ade23de5d46b64b8.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `ax-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name ax_core --edition=2021 crates/ax-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3cdd1824e2a37b8c -C extra-filename=-5ab5d1a675507000 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps --extern proptest=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libproptest-66f5263f594b7cee.rlib --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde-0e044a46a977e748.rlib --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde_json-7a9eb2fcd78de1ef.rlib --extern thiserror=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libthiserror-ade23de5d46b64b8.rlib` (exit status: 1)

*** result: Failure(101)
